content dir sep

--- a/src/content/개발지식/읽기 좋은 코드 - 수정중.md
+++ b/src/content/개발지식/읽기 좋은 코드 - 수정중.md
@@ -3,6 +3,7 @@ layout: post
 title: '읽기 좋은 코드를 위해서'
 author: [JTRee]
 tags: ['개발 지식']
+image: img/temp.png
 date: '2021-05-20T15:11:55.000Z'
 draft: false
 excerpt: 읽기 좋은 코드가 좋은 코드다(도서)를 읽으며 정리한 내용입니다.
