--- a/src/content/개발지식/버그,오류(에러),예외,경고.md
+++ b/src/content/개발지식/버그,오류(에러),예외,경고.md
@@ -20,7 +20,9 @@ excerpt: 비슷비슷한 용어들의 차이점과 특징에 대해서 알아보
 > 위키피디아 - 소프트웨어 버그
 
 ```markdown
-버그(bug)는 소프트웨어가 예상하지 못한 잘못된 결과를 내거나, 오류가 발생,착오나,오작동이 발생하는 등의 문제를 뜻한다. 버그는 프로그램의 소스코드나 설계 과정에서의 오류 때문에 발생한다.
+버그(bug)는 소프트웨어가 예상하지 못한 잘못된 결과를 내거나,
+오류가 발생,착오나,오작동이 발생하는 등의 문제를 뜻한다.
+버그는 프로그램의 소스코드나 설계 과정에서의 오류 때문에 발생한다.
 ```
 
 버그는 간단히 말해 프로그래머에 의한 에러이다.
@@ -30,7 +32,8 @@ excerpt: 비슷비슷한 용어들의 차이점과 특징에 대해서 알아보
 > 표준국어대사전 - 에러
 
 ```markdown
-명사: 연산 처리 장치의 잘못된 동작이나 소프트웨어의 잘못 때문에 생기는, 계산값과 참값과의 오차
+명사: 연산 처리 장치의 잘못된 동작이나 소프트웨어의 잘못 때문에 생기는,
+계산값과 참값과의 오차
 ```
 
 오류는 대부분 실행이 불가능할 정도로 큰 문제를 뜻한다.
@@ -48,8 +51,10 @@ excerpt: 비슷비슷한 용어들의 차이점과 특징에 대해서 알아보
 > 위키피디아 - 예외처리
 
 ```markdown
-예외 처리 또는 오류 처리는 일발적인 실행의 흐름을 바구는 몇 가지 조건을 처리하도록 설계한 프로그래밍 언어의 개념이나 컴퓨터 하드웨어 구조를 말한다.
-빌반적으로 프로그램이 처리되는 동안 특정한 문제가 일어났을 때 처리를 중단하고 다른처리를 하는 것을 예외 처리라고 한다.
+예외 처리 또는 오류 처리는 일발적인 실행의 흐름을 바구는 몇 가지 조건을 처리하도록 설계한
+프로그래밍 언어의 개념이나 컴퓨터 하드웨어 구조를 말한다.
+일반적으로 프로그램이 처리되는 동안 특정한 문제가 일어났을 때 
+처리를 중단하고 다른처리를 하는 것을 예외 처리라고 한다.
 ```
 
 예외는 실행 도중 중단될 정도로 큰 문제가 아닐 때 발생하는 것
