fix github link

--- a/src/content/개발지식/알고리즘.md
+++ b/src/content/개발지식/알고리즘.md
@@ -27,4 +27,8 @@ excerpt: 코세라 알고리즘 1강
 1강에 대한 과제
 > algs4.jar를 사용해야한다. (프린스턴 교과서 라이브러리)
 
-[1강 과제 github 링크](https://github.com)
+- hello world 찍기
+- 매개변수를 활용한 출력
+- 배열을 사용하지 않고 랜덤 출력하기
+
+[1강 과제 github 링크](https://github.com/JunMock/coursera-algo/tree/master/cp1)
